- Added recursive search for Imap folders
- VoIP will rewrite tel: links to callto: in Firefox in Windows
- Updated VObject to 3.1
- Updated Sabredav to 1.8.6
- Fixed "Show unread" /  "Show all" button state in the email module when switching message panel position.

05-08-2013 4.2.10
- Moved address list filter from accordion to separate panel underneath the accordion panel.
- Fixed imap import for tickets when no subject is given in the email.
- Address Book module: It is now possible to export all hidden fields into CSV, HTML and PDF.
- Check if base64 encoded strings can be divided by 4 if decoded line by line to 
  avoid corrupted mails.
- 3rd contact e-mail showed up with email nr 2.
- Removing contact photo error
- Mask sticked when canceling folder delete in e-mail
- Removed publicly visible version number
- Updated German
- Copy e-mail with drag and drop when holding ctrl key
- Option to convert old office files in Google Drive module

29-07-2013 4.2.9
- support for z-push without storing passwords
- Disconnect button for Dropbox
- Z-push 2 fixes for LG phones
- Z-push admin shows more info
- Fixed Notice:  Undefined index: sort in /usr/share/groupoffice/modules/tickets/controller/TicketController.php on line 54
- custom header valdiation for sieve rules
- Try to use z-push password when e-mail password is not stored in db
- Smaller contact pictures so it won't break sync
- Fixed caldav problem when accepting an invitation by mail before it was synced to TB.

25-07-2013 4.2.8
- Added BIC number to company fields of the addressbook module
- The paste-from-word button in the wisywig editor is translated and Dutch and German translation was added
- IE 10 Comma problem

19-07-2013 4.2.7
- Fixed euro character encoding problem in emails
- When changing th FK of the relation the contains the ACL field (eg contanct <--> addressbook) the old permission level will be checked as well